# nakh-daghestanian-assignment

./: .gitignore  README.md  process.py  pyproject.toml  to-csv.py
src/ce_ru_parse/: __main__.py  exclude.py  ipa.py  utils.py
src/ce_ru_parse/processors/: abdurashidov_ce_ru_ru_ce.py  aslahanov_ru_ce.py  baisultanov_ce_ru.py  ce_ru_anatomy.py  daukaev_ru_ce.py  ismailov_ce_ru.py  ismailov_ru_ce.py  karasaev_maciev_ru_ce.py  maciev_ce_ru.py  ru_ce_anatomy.py  ru_ce_ce_ru_computer.py  umarhadjiev_ahmatukaev_ce_ru_ru_ce.py
